fix pagination, remove bottom blocks on small screen

--- a/app/assets/stylesheets/bootstrap/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap/bootstrap.css
@@ -2243,6 +2243,14 @@ table th[class*="col-"] {
   min-height: .01%;
   overflow-x: auto;
 }
+@media screen and (max-width: 1080px) {
+  .bg-container .posters {
+    display: none;
+  }
+  .bg-container .bottom-links {
+    display: none;
+  }
+}
 @media screen and (max-width: 767px) {
   .table-responsive {
     width: 100%;
